Added particle effects and overhauled player animations.